# durable-run-style

./: .gitignore  Cargo.toml  README.md  ascii_art.txt  devenv.nix
demo/: README.md  demo.tape  docker-compose.yml  record.sh
scripts/: build.sh  install.sh  test.sh
src/: app.rs  app_config.rs  cli.rs  disk.rs  easing.rs  gfx_demo.rs  lib.rs  main.rs  network.rs  process.rs  ui.rs  ui_animation.rs  ui_layout.rs  ui_output.rs  utils.rs
src/color/: mod.rs  serde.rs  serializable.rs  utils.rs
src/config/: config.rs  io.rs  mod.rs  tests.rs
src/theme/: default.rs  mod.rs  tests.rs
static/: bottom_art.txt  top_art.txt
